Task#4924 - keyboard issues on IE9 (CTRL-Y / CTRL-Z)

--- a/tine20/themes/expresso30/resources/css/expresso30.css
+++ b/tine20/themes/expresso30/resources/css/expresso30.css
@@ -425,7 +425,7 @@ font-size: 12px;
 }
 
 .preview-panel-felamimail-body {
-    font-size: 14px;
+    font-size: 100%;
 }
 
 .preview-panel-felamimail-body { 
