--- a/tine20/themes/serpro/resources/css/serpro.css
+++ b/tine20/themes/serpro/resources/css/serpro.css
@@ -430,7 +430,7 @@ font-size: 12px;
 }
 
 .preview-panel-felamimail-body {
-    font-size: 14px;
+    font-size: 100%;
 }
 
 .preview-panel-felamimail-body { 
